<?xml version="1.0"?>
<package>
  <name>bboxes_ex_msgs</name>
  <version>0.0.0</version>
  <description>bboxes_ex_msgs pkg </description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apatch-2.0</license>
  <author email="ray255ar@gmail.com">Ar-Ray-code</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>